# volume_stitching

./: .gitignore  CMakeLists.txt  README.txt
include/: base_stitcher.hpp  evaluate.cuh  fusion.cuh  imageIO.hpp  mat4x4.hpp  registration.cuh  stitching.hpp  vec4.hpp
libs/niftiio/: CMakeLists.txt
sample_data/: total_matrices.txt  truth_matrices.txt
scripts/: 3DNifti.py  eval.py
scripts/readwrite/: CMakeLists.txt  fileinfo.cxx  readwrite.cxx
src/: base_stitcher.cpp  imageIO.cpp  main.cpp  stitching.cpp  stitching.cu
